feat: add endpoints to get songs and delete
